--- a/app/views/guide_templates/show.html.erb
+++ b/app/views/guide_templates/show.html.erb
@@ -357,7 +357,7 @@
                       <!-- card  -->
                       <hr>
 
-                    </div>
+                    </div>   </div>
 
 
                   <% end %>
@@ -384,7 +384,7 @@
                     <h3><%= resource.category %></h3>
                     <h4><%= resource.created_at %></h4>
 
-                    <a href="<%= resource.resource %>"><img src="<%= resource.resource %>" class="img-fluid" style="max-height:600px">
+                    <a href="<%= resource.resource %>"><img src="<%= resource.resource %>" class="img-fluid" style="max-height:500px">
                     </a>
                     <% if current_user == nil %>
                     <% else %>
@@ -405,126 +405,126 @@
                           <iframe class="embed-responsive-item" src="<%= youtube_video.url_link.gsub(".com/watch?v=",".com/embed/") %>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                       </div>
-                      </div>
-                      <% if current_user == nil %>
-                      <% else %>
+                    </div>
+                    <% if current_user == nil %>
+                    <% else %>
 
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#YoutubeVideoEditModalCenter">
-                          <i class="far fa-edit"></i>
-                          Edit YoutubeVideo
-                        </button>
-                        <!-- edit guide Modal -->
-                        <div class="modal fade" id="YoutubeVideoEditModalCenter" tabindex="-1" role="dialog" aria-labelledby="YoutubeVideoEditModalCenterTitle" aria-hidden="true">
-                          <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="YoutubeVideoEditModalLongTitle">Edit Youtube video descriptors</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                              </div>
-                              <div class="modal-body">
-                                <form action="/update_youtube_video" method="post" id="YoutubeVideoForm">
-                                  <div class="form-group">
-                                    <label for="url_link" class="col-form-label">URL link</label>
-                                    <input type="text" class="form-control" name="url_link" id="url_link" value="<%= youtube_video.try(:url_link) %>">
+                      <!-- Button trigger modal -->
+                      <button type="button" class="btn btn-link" data-toggle="modal" data-target="#YoutubeVideoEditModalCenter">
+                        <i class="far fa-edit"></i>
+                        Edit YoutubeVideo
+                      </button>
+                      <!-- edit guide Modal -->
+                      <div class="modal fade" id="YoutubeVideoEditModalCenter" tabindex="-1" role="dialog" aria-labelledby="YoutubeVideoEditModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="YoutubeVideoEditModalLongTitle">Edit Youtube video descriptors</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <form action="/update_youtube_video" method="post" id="YoutubeVideoForm">
+                                <div class="form-group">
+                                  <label for="url_link" class="col-form-label">URL link</label>
+                                  <input type="text" class="form-control" name="url_link" id="url_link" value="<%= youtube_video.try(:url_link) %>">
 
-                                    <label for="description" class="col-form-label">Description</label>
-                                    <input type="text" class="form-control" name="description" id="description" value="<%= youtube_video.try(:description) %>">
+                                  <label for="description" class="col-form-label">Description</label>
+                                  <input type="text" class="form-control" name="description" id="description" value="<%= youtube_video.try(:description) %>">
 
-                                    <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                                    <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= youtube_video.try(:tab_id) %>">
-                                  </div>
-
-                                </form>
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" form="YoutubeVideoForm" class="btn btn-primary">Update Youtube video descriptors</button>
-                                <a href="#" id="show_more">More</a>
-
-                                <div id="more" class="hidden">
-                                  <a href="/delete_youtube_video/<%= youtube_video.id %>" data-confirm="Are you sure?">
-                                    Delete youtube_video
-                                  </a>
+                                  <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
+                                  <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= youtube_video.try(:tab_id) %>">
                                 </div>
 
+                              </form>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                              <button type="submit" form="YoutubeVideoForm" class="btn btn-primary">Update Youtube video descriptors</button>
+                              <a href="#" id="show_more">More</a>
+
+                              <div id="more" class="hidden">
+                                <a href="/delete_youtube_video/<%= youtube_video.id %>" data-confirm="Are you sure?">
+                                  Delete youtube_video
+                                </a>
                               </div>
+
                             </div>
                           </div>
                         </div>
-                        <!--END edit guide MODAL-->
-                      <% end %>
-                      <hr>
+                      </div>
+                      <!--END edit guide MODAL-->
                     <% end %>
+                    <hr>
+                  <% end %>
 
 
-                    <!--DROPDOWN BUTTONS TO ADD CONTENT-->
-                    <% if current_user == nil %>
-                    <% else %>
-                      <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <i class="fas fa-plus"></i>
-                          Add Content</button>
-                        <div class="btn-group" role="group">
-                          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                            <form action="/text_components/new">
-                              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                              <button type="submit" class="dropdown-item">
-                                <i class="fas fa-font"></i>
-                                Add a text component
-                              </button>
-                            </form>
+                  <!--DROPDOWN BUTTONS TO ADD CONTENT-->
+                  <% if current_user == nil %>
+                  <% else %>
+                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-plus"></i>
+                        Add Content</button>
+                      <div class="btn-group" role="group">
+                        <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                          <form action="/text_components/new">
+                            <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
+                            <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
+                            <button type="submit" class="dropdown-item">
+                              <i class="fas fa-font"></i>
+                              Add a text component
+                            </button>
+                          </form>
 
-                            <form action="/resources/new">
-                              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                              <button type="submit" class="dropdown-item">
-                                <i class="fas fa-file"></i>
-                                Add a resource
-                              </button>
-                            </form>
-                            <form action="/youtube_videos/new">
-                              <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
-                              <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
-                              <button type="submit" class="dropdown-item">
-                                <i class="fab fa-youtube"></i>
-                                Add a Youtube video
-                              </button>
-                            </form>
-                          </div>
+                          <form action="/resources/new">
+                            <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
+                            <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
+                            <button type="submit" class="dropdown-item">
+                              <i class="fas fa-file"></i>
+                              Add a resource
+                            </button>
+                          </form>
+                          <form action="/youtube_videos/new">
+                            <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= tab.id %>">
+                            <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= @guide.id %>">
+                            <button type="submit" class="dropdown-item">
+                              <i class="fab fa-youtube"></i>
+                              Add a Youtube video
+                            </button>
+                          </form>
                         </div>
                       </div>
-                      <hr>
-                    <% end %>
-
-                    <!--               END TO DISCUSSION TAB LOGIC-->
+                    </div>
+                    <hr>
                   <% end %>
-                  <!--END DROPDOWN BUTTONS-->
+
+                  <!--               END TO DISCUSSION TAB LOGIC-->
+                <% end %>
+                <!--END DROPDOWN BUTTONS-->
 
 
-                </div>
               </div>
+            </div>
 
-            <% end %>
-</div>
-
-          </div>
-
-
-          <!--  Ads COLUMN-->
-          <div class="col-2">
-            <h4> Ads go here</h4>
-            <img style="max-height:auto; max-width:100%;" src="http://construction.krends.com/wp-content/uploads/2015/03/shutterstock_151394975.jpg">
-
-          </div>
-
-
+          <% end %>
         </div>
+
       </div>
 
 
-    </body>
-  </html>
+      <!--  Ads COLUMN-->
+      <div class="col-2">
+        <h4> Ads go here</h4>
+        <img style="max-height:auto; max-width:100%;" src="http://construction.krends.com/wp-content/uploads/2015/03/shutterstock_151394975.jpg">
+
+      </div>
+
+
+    </div>
+  </div>
+
+
+</body>
+</html>
