--- a/app/views/resource_templates/new_form.html.erb
+++ b/app/views/resource_templates/new_form.html.erb
@@ -29,6 +29,7 @@
   <div class="form-group">
 
     <input type="hidden" id="tab_id" name="tab_id" class="form-control" value="<%= params.fetch("tab_id") %>">
+    <input type="hidden" id="guide_id" name="guide_id" class="form-control" value="<%= params.fetch("guide_id") %>">
   </div>
 
   <!-- Label and input for resource -->
